Agregar banner movil de sponsors con scroll continuo y actualizar URLs faltantes

--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@
                         </a>
                     </div>
                     <div class="sponsor-logo-item">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="sponsor-link">
+                        <a href="https://www.google.com/search?q=Opti-Clean+ruitenwasserij+Brugge" target="_blank" rel="noopener noreferrer" class="sponsor-link">
                             <div class="sponsor-logo-container">
                                 <img src="images/sponsors/opticlean.jpeg" alt="RUITENWASSERIJ BVBA OPTI-CLEAN"
                                     class="sponsor-image">
@@ -1430,7 +1430,7 @@
                         </a>
                     </div>
                     <div class="sponsor-logo-item">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="sponsor-link">
+                        <a href="https://www.google.com/search?q=Savels+VDB+Belgium" target="_blank" rel="noopener noreferrer" class="sponsor-link">
                             <div class="sponsor-logo-container">
                                 <img src="images/sponsors/22 SavelVDB_WitTransparant (002)-4.jpeg" alt="SAVELS - VDB"
                                     class="sponsor-image">
@@ -1624,6 +1624,165 @@
                         </div>
                     </div>
                 </div>
+                
+                <!-- Mobile Sponsors Banner -->
+                <div class="sponsors-mobile-banner">
+                    <div class="sponsors-mobile-track">
+                        <!-- Primera ronda de sponsors -->
+                        <a href="https://www.bossypaints.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Bossy.jpeg" alt="Bossypain">
+                        </a>
+                        <a href="https://www.jovado.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Jovado.jpeg" alt="KOFFIE JOVADO">
+                        </a>
+                        <a href="https://ks-construct-kh.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/LOGO tcd.jpeg" alt="KS CONSTRUCT">
+                        </a>
+                        <a href="https://www.facebook.com/dimitri.coopman.7/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/logo dimitri.jpeg" alt="COOPMAN DIMITRI">
+                        </a>
+                        <a href="https://visitlissewege.be/cafe-den-ouden-toren-lissewege/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Den ouden toren.jpeg" alt="Café Den Ouden Toren">
+                        </a>
+                        <a href="https://dauwens.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/1 dauwens-5.jpeg" alt="SCHILDERWERKEN DAUWENS">
+                        </a>
+                        <a href="https://denieuweblauwetoren.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/blauwe toren klein.jpeg" alt="DE NIEUWE BLAUWE TOREN">
+                        </a>
+                        <a href="https://voetbalschool-legein.webnode.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/voetbalschool_Devriendt_Logo-04.jpeg" alt="VOETBALSCHOOL DEVRIENDT-LEBEIN">
+                        </a>
+                        <a href="https://www.facebook.com/p/MAX-dak-en-schrijnwerken-100057594483544/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/max nieuw.jpeg" alt="MAX' DAK- EN SCHRIJNWERKEN">
+                        </a>
+                        <a href="https://www.terdoest.be/nl/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/jenko  terdoest.jpeg" alt="Hostellerie Ter Doest">
+                        </a>
+                        <a href="https://staelen.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Logo_Staelen_Nick_opt-768x513.png" alt="Staelen Nick">
+                        </a>
+                        <a href="https://www.facebook.com/p/Cafe-De-Bolle-100057068485628/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/de bolle.jpeg" alt="Cafe De Bolle">
+                        </a>
+                        <a href="https://www.google.com/search?q=Opti-Clean+ruitenwasserij+Brugge" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/opticlean.jpeg" alt="RUITENWASSERIJ BVBA OPTI-CLEAN">
+                        </a>
+                        <a href="https://nl.flandersroadservices.com/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/LOGO FRS (003).jpeg" alt="Flanders Road Services">
+                        </a>
+                        <a href="https://www.contrast-interieur.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Logo_Contrast_Interieur.png" alt="CONTRAST">
+                        </a>
+                        <a href="https://www.google.com/search?q=Savels+VDB+Belgium" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/22 SavelVDB_WitTransparant (002)-4.jpeg" alt="SAVELS - VDB">
+                        </a>
+                        <a href="https://www.facebook.com/p/Blikvanger-Photography-100063898729913/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/blikvanger.jpeg" alt="Blikvanger Photography">
+                        </a>
+                        <a href="https://bizzy.org/nl/be/0801197630/algemeen-schrijnwerk-cedric-dellevoet" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/LOGO tcd.jpeg" alt="CEDRIC DELLEVOET">
+                        </a>
+                        <a href="https://slotenmakerbg.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/BG_Sleutel-Logo-2.png" alt="BG Sleutel">
+                        </a>
+                        <a href="https://bistrodekip.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/bistro de kip.jpeg" alt="De Kip">
+                        </a>
+                        <a href="https://www.facebook.com/p/Lissewege-Express-100069385129828/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/23 Lissewege Express.jpeg" alt="Lissewege Express">
+                        </a>
+                        <a href="https://www.panos.be/nl" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/panos.jpeg" alt="Panos">
+                        </a>
+                        <a href="https://www.ecs.be/nl" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/ecs.jpeg" alt="ECS Transport">
+                        </a>
+                        <a href="https://www.facebook.com/pages/De%20Coif/449152215136697/about/?ref=page_internal" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/26 de coif.jpeg" alt="Coiffeur de CoisDe Haan">
+                        </a>
+                        <a href="https://www.inforegio.be/fietsen-bikeworld-knokke-heist" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/bikeworld.jpeg" alt="BIKE WORLD">
+                        </a>
+                        <a href="https://www.kranenverheye.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/D Verheye-3.jpeg" alt="VERHEYE DANNY KRAANWERKEN">
+                        </a>
+                        <a href="https://belladerma.store/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/bella.jpeg" alt="BellaDerma">
+                        </a>
+                        <a href="https://tropicana.be/nl-be/home" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/tropicana-3.jpeg" alt="Tropicana fruitsap">
+                        </a>
+                        <a href="https://www.bobosland.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/logo bobo-s land (002).jpeg" alt="bobosland">
+                        </a>
+                        <a href="https://www.passeviet.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/passeviet-logo.jpeg" alt="Passeviet">
+                        </a>
+                        <a href="https://tennisclubduinbergen.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/27 ASCD zond achter.jpeg" alt="tennis - padel duinbergen">
+                        </a>
+                        <a href="https://www.facebook.com/lifecoachvero/?locale=nl_NL" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/audry vaesen.jpeg" alt="AUDREY VAESEN">
+                        </a>
+                        <a href="https://schoonheidsinstituutonyx.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Onyx.jpeg" alt="ONYX permanente make-up">
+                        </a>
+                        <a href="https://www.facebook.com/p/Simons-Santos-BVBA-100063611467554/?locale=nl_BE" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/simon santos.jpeg" alt="Transport Simon-Santos">
+                        </a>
+                        <a href="https://optiekdelrue.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Delreu.jpeg" alt="OPTIEK DELRUE">
+                        </a>
+                        <a href="https://www.beautyandcareluna.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Luna VB.jpeg" alt="Luna Beauty Care">
+                        </a>
+                        <a href="https://www.instagram.com/passionnailsbeautysalon/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Kimberly.jpeg" alt="Passion NAILS & BEAUTY Kimberly Lootens">
+                        </a>
+                        <a href="https://bakkerij-putje.com/putje/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/t putje.jpeg" alt="Bakkerij 't putje">
+                        </a>
+                        <a href="https://ks-construct-kh.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Kenzie.jpeg" alt="Kenzie">
+                        </a>
+                        <a href="https://www.qualitec.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Martens-Talitha-crew-2019-6zww-40x60.jpeg" alt="Martens Talitha">
+                        </a>
+                        <!-- Duplicados para scroll infinito -->
+                        <a href="https://www.bossypaints.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Bossy.jpeg" alt="Bossypain">
+                        </a>
+                        <a href="https://www.jovado.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Jovado.jpeg" alt="KOFFIE JOVADO">
+                        </a>
+                        <a href="https://ks-construct-kh.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/LOGO tcd.jpeg" alt="KS CONSTRUCT">
+                        </a>
+                        <a href="https://www.facebook.com/dimitri.coopman.7/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/logo dimitri.jpeg" alt="COOPMAN DIMITRI">
+                        </a>
+                        <a href="https://visitlissewege.be/cafe-den-ouden-toren-lissewege/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/Den ouden toren.jpeg" alt="Café Den Ouden Toren">
+                        </a>
+                        <a href="https://dauwens.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/1 dauwens-5.jpeg" alt="SCHILDERWERKEN DAUWENS">
+                        </a>
+                        <a href="https://denieuweblauwetoren.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/blauwe toren klein.jpeg" alt="DE NIEUWE BLAUWE TOREN">
+                        </a>
+                        <a href="https://voetbalschool-legein.webnode.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/voetbalschool_Devriendt_Logo-04.jpeg" alt="VOETBALSCHOOL DEVRIENDT-LEBEIN">
+                        </a>
+                        <a href="https://www.facebook.com/p/MAX-dak-en-schrijnwerken-100057594483544/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/max nieuw.jpeg" alt="MAX' DAK- EN SCHRIJNWERKEN">
+                        </a>
+                        <a href="https://www.terdoest.be/nl/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
+                            <img src="images/sponsors/jenko  terdoest.jpeg" alt="Hostellerie Ter Doest">
+                        </a>
+                    </div>
+                </div>
+                
                 <div class="sponsor-cta">
                     <p>Wil je sponsor worden van R.F.C. Lissewege?</p>
                     <a href="#contact" class="btn-new btn-new-accent">
