Corregir logo del header para que tenga fondo circular perfecto con contenedor dedicado

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <header class="main-header" id="mainHeader">
         <div class="navbar-container">
             <a href="#home" class="nav-brand">
-                <img src="images/logos/100b.jpeg" alt="RFC Lissewege" class="nav-logo-img">
+                <div class="nav-logo-container">
+                    <img src="images/logos/100b.jpeg" alt="RFC Lissewege" class="nav-logo-img">
+                </div>
                 <div class="nav-brand-text">
                     <span class="brand-main">RFC Lissewege</span>
                     <span class="brand-sub">Since 1947</span>
