Fix: Mejorar visibilidad de logos en banner mÃ³vil de sponsors y hacer banner visible para debugging

--- a/index.html
+++ b/index.html
@@ -1632,13 +1632,13 @@
                     <div class="sponsors-mobile-track">
                         <!-- Primera ronda de sponsors -->
                         <a href="https://www.bossypaints.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
-                            <img src="images/sponsors/Bossy.jpeg" alt="Bossypain">
+                            <img src="images/sponsors/Bossy.jpeg" alt="Bossypain" loading="eager" decoding="async" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'120\' height=\'120\'%3E%3Crect width=\'120\' height=\'120\' fill=\'%23f0f0f0\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' text-anchor=\'middle\' dy=\'.3em\' fill=\'%23999\' font-family=\'Arial\' font-size=\'12\'%3EBossypain%3C/text%3E%3C/svg%3E';">
                         </a>
                         <a href="https://www.jovado.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
-                            <img src="images/sponsors/Jovado.jpeg" alt="KOFFIE JOVADO">
+                            <img src="images/sponsors/Jovado.jpeg" alt="KOFFIE JOVADO" loading="eager" decoding="async" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'120\' height=\'120\'%3E%3Crect width=\'120\' height=\'120\' fill=\'%23f0f0f0\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' text-anchor=\'middle\' dy=\'.3em\' fill=\'%23999\' font-family=\'Arial\' font-size=\'12\'%3EJovado%3C/text%3E%3C/svg%3E';">
                         </a>
                         <a href="https://ks-construct-kh.be/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
-                            <img src="images/sponsors/LOGO tcd.jpeg" alt="KS CONSTRUCT">
+                            <img src="images/sponsors/LOGO tcd.jpeg" alt="KS CONSTRUCT" loading="eager" decoding="async" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'120\' height=\'120\'%3E%3Crect width=\'120\' height=\'120\' fill=\'%23f0f0f0\'/%3E%3Ctext x=\'50%25\' y=\'50%25\' text-anchor=\'middle\' dy=\'.3em\' fill=\'%23999\' font-family=\'Arial\' font-size=\'12\'%3EKS CONSTRUCT%3C/text%3E%3C/svg%3E';">
                         </a>
                         <a href="https://www.facebook.com/dimitri.coopman.7/" target="_blank" rel="noopener noreferrer" class="sponsor-mobile-item">
                             <img src="images/sponsors/logo dimitri.jpeg" alt="COOPMAN DIMITRI">
