Fix: Eliminar errores CORS y corregir imÃ¡genes de sponsors en banner mÃ³vil

--- a/index.html
+++ b/index.html
@@ -2969,6 +2969,7 @@
     <script src="scripts/api-config.js"></script>
     <script src="scripts/real-matches-data.js"></script>
     <script src="scripts/team-logos.js"></script>
+    <script src="scripts/fix-sponsor-images.js"></script>
     <script src="scripts/football-api.js"></script>
     <script src="scripts/standings.js"></script>
     <script src="scripts/calendar.js"></script>
