Fix: Reemplazar iconos genÃ©ricos del footer con imÃ¡genes reales de sponsors usando scroll continuo

--- a/index.html
+++ b/index.html
@@ -2841,19 +2841,67 @@
                     <h3>Onze Partners</h3>
                     <div class="sponsors-track">
                         <!-- Original Items -->
-                        <div class="sponsor-item"><i class="fas fa-circle sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-square sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-star sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-heart sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-crown sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-gem sponsor-logo-footer"></i></div>
+                        <a href="https://www.bossypaints.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/Bossy.jpeg" alt="Bossypain" loading="lazy">
+                        </a>
+                        <a href="https://www.jovado.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/Jovado.jpeg" alt="KOFFIE JOVADO" loading="lazy">
+                        </a>
+                        <a href="https://ks-construct-kh.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/LOGO%20tcd.jpeg" alt="KS CONSTRUCT" loading="lazy">
+                        </a>
+                        <a href="https://www.facebook.com/dimitri.coopman.7/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/logo%20dimitri.jpeg" alt="COOPMAN DIMITRI" loading="lazy">
+                        </a>
+                        <a href="https://visitlissewege.be/cafe-den-ouden-toren-lissewege/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/Den%20ouden%20toren.jpeg" alt="Café Den Ouden Toren" loading="lazy">
+                        </a>
+                        <a href="https://dauwens.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/1%20dauwens-5.jpeg" alt="SCHILDERWERKEN DAUWENS" loading="lazy">
+                        </a>
+                        <a href="https://denieuweblauwetoren.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/blauwe%20toren%20klein.jpeg" alt="DE NIEUWE BLAUWE TOREN" loading="lazy">
+                        </a>
+                        <a href="https://voetbalschool-legein.webnode.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/voetbalschool_Devriendt_Logo-04.jpeg" alt="VOETBALSCHOOL DEVRIENDT-LEBEIN" loading="lazy">
+                        </a>
+                        <a href="https://www.facebook.com/p/MAX-dak-en-schrijnwerken-100057594483544/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/max%20nieuw.jpeg" alt="MAX' DAK- EN SCHRIJNWERKEN" loading="lazy">
+                        </a>
+                        <a href="https://www.terdoest.be/nl/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/jenko%20%20terdoest.jpeg" alt="Hostellerie Ter Doest" loading="lazy">
+                        </a>
                         <!-- Duplicates for infinite scroll -->
-                        <div class="sponsor-item"><i class="fas fa-circle sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-square sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-star sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-heart sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-crown sponsor-logo-footer"></i></div>
-                        <div class="sponsor-item"><i class="fas fa-gem sponsor-logo-footer"></i></div>
+                        <a href="https://www.bossypaints.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/Bossy.jpeg" alt="Bossypain" loading="lazy">
+                        </a>
+                        <a href="https://www.jovado.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/Jovado.jpeg" alt="KOFFIE JOVADO" loading="lazy">
+                        </a>
+                        <a href="https://ks-construct-kh.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/LOGO%20tcd.jpeg" alt="KS CONSTRUCT" loading="lazy">
+                        </a>
+                        <a href="https://www.facebook.com/dimitri.coopman.7/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/logo%20dimitri.jpeg" alt="COOPMAN DIMITRI" loading="lazy">
+                        </a>
+                        <a href="https://visitlissewege.be/cafe-den-ouden-toren-lissewege/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/Den%20ouden%20toren.jpeg" alt="Café Den Ouden Toren" loading="lazy">
+                        </a>
+                        <a href="https://dauwens.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/1%20dauwens-5.jpeg" alt="SCHILDERWERKEN DAUWENS" loading="lazy">
+                        </a>
+                        <a href="https://denieuweblauwetoren.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/blauwe%20toren%20klein.jpeg" alt="DE NIEUWE BLAUWE TOREN" loading="lazy">
+                        </a>
+                        <a href="https://voetbalschool-legein.webnode.be/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/voetbalschool_Devriendt_Logo-04.jpeg" alt="VOETBALSCHOOL DEVRIENDT-LEBEIN" loading="lazy">
+                        </a>
+                        <a href="https://www.facebook.com/p/MAX-dak-en-schrijnwerken-100057594483544/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/max%20nieuw.jpeg" alt="MAX' DAK- EN SCHRIJNWERKEN" loading="lazy">
+                        </a>
+                        <a href="https://www.terdoest.be/nl/" target="_blank" rel="noopener noreferrer" class="sponsor-item">
+                            <img src="images/sponsors/jenko%20%20terdoest.jpeg" alt="Hostellerie Ter Doest" loading="lazy">
+                        </a>
                     </div>
                 </div>
             </div>
