Fix: Actualizar calendario y popup de eventos
Recalcula partidos pasados y futuros segun fecha actual y ajusta textos y dimensiones del popup de eventos en Dutch.

--- a/index.html
+++ b/index.html
@@ -2989,7 +2989,7 @@
     <!-- Eventos Popup -->
     <div class="event-popup-overlay" id="eventPopupOverlay" aria-hidden="true">
         <div class="event-popup" role="dialog" aria-modal="true" aria-labelledby="eventPopupTitle">
-            <button class="event-popup-close" type="button" aria-label="Cerrar">
+            <button class="event-popup-close" type="button" aria-label="Sluiten">
                 <i class="fas fa-times"></i>
             </button>
             <div class="event-popup-image">
@@ -3001,10 +3001,10 @@
                 <p id="eventPopupDescription"></p>
                 <div class="event-popup-actions">
                     <button class="event-popup-btn secondary" id="eventPopupPrev" type="button">
-                        <i class="fas fa-chevron-left"></i> Anterior
+                        <i class="fas fa-chevron-left"></i> Vorige
                     </button>
                     <button class="event-popup-btn primary" id="eventPopupNext" type="button">
-                        Siguiente <i class="fas fa-chevron-right"></i>
+                        Volgende <i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
                 <div class="event-popup-counter" id="eventPopupCounter"></div>
